Added callback (set chosen city)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:inputType="textPersonName"
-        android:text="Name1"
+        android:hint="Откуда"
         android:ems="10"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:inputType="textPersonName"
-        android:text="Name2"
+        android:hint="Куда"
         android:ems="10"
         android:layout_below="@+id/editTextFrom"
         android:layout_alignStart="@+id/editTextFrom"
