--- a/app/src/main/res/layout/activity_station.xml
+++ b/app/src/main/res/layout/activity_station.xml
@@ -17,7 +17,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/person_name"
+                android:id="@+id/station_city"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:textSize="30sp"
@@ -25,13 +25,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/person_age"
-                android:layout_below="@+id/person_name"
+                android:id="@+id/station_country"
+                android:layout_below="@+id/station_city"
                 />
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/btn1"
+                android:id="@+id/btn_info"
                 android:background="@drawable/attention"
                 android:layout_alignParentRight="true"/>
             <ImageButton
@@ -39,8 +39,8 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/bus"
-                android:id="@+id/btn2"
-                android:layout_below="@+id/btn1"/>
+                android:id="@+id/btn_bus"
+                android:layout_below="@+id/btn_info"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
