--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,10 @@
         android:hint="Откуда"
         android:ems="10"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"
-        android:id="@+id/editTextFrom" />
+        android:id="@+id/editTextFrom"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -32,7 +33,8 @@
         android:layout_below="@+id/editTextFrom"
         android:layout_alignStart="@+id/editTextFrom"
         android:layout_marginTop="53dp"
-        android:id="@+id/editTextTo" />
+        android:id="@+id/editTextTo"
+        android:layout_alignParentEnd="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -44,5 +46,5 @@
         android:ems="10"
         android:id="@+id/editTextData"
         android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/editTextTo" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
