--- a/app/src/main/res/layout/activity_station.xml
+++ b/app/src/main/res/layout/activity_station.xml
@@ -15,18 +15,18 @@
             android:layout_height="wrap_content"
             >
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:id="@+id/station_city"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
-                android:textSize="30sp"
+                android:textSize="12sp"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/station_country"
                 android:layout_below="@+id/station_city"
+                android:textSize="20sp"
                 />
             <ImageButton
                 android:layout_width="wrap_content"
