--- a/app/src/main/res/layout/info_station.xml
+++ b/app/src/main/res/layout/info_station.xml
@@ -4,9 +4,31 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:text="TextView"
+        android:text="Station"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:id="@+id/textView6" />
+        android:gravity="center"
+        android:textSize="25sp"
+        android:id="@+id/txt_station_name" />
+    <TextView
+        android:text="Country"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_country_name" />
+    <TextView
+        android:text="Region"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_region_name" />
+    <TextView
+        android:text="City"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_city_name" />
+    <TextView
+        android:text="District"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_district_name" />
+
 </LinearLayout>
